@@ -36,9 +36,6 @@
    created by resellers.
 	- When creating domain, plan can override template.
 
-  - per-directory PHP version
-	- enable in script installers
-
   - SpamAssassin Rules Emporium
 
   - Better integration of protected web directories
@@ -48,3 +45,7 @@
   - Integrated web page editor, linked from left menu top
 
   - File manager button for new HTML file
+
+  - Remove dir and web check for script installers
+
+  - Fix mediawiki script installer to be friendlier
