@@ -425,6 +425,7 @@ setup_scriptnover=.. version is not valid
 setup_scriptnodb=.. server does not have a $1 database
 setup_scriptopts=.. options problem detected : $1
 setup_scriptdeps=.. dependencies problem detected : $1
+setup_scriptphpver=.. PHP version $1 required
 setup_scriptfetch=.. failed to fetch files : $1
 setup_scriptclash=.. script needs to create a database named $1, but it already exists
 setup_scriptdone=.. done. $1
@@ -2332,6 +2333,8 @@ scripts_iversion=Version to install
 scripts_upversion=Current version number
 scripts_iok=Install Now
 scripts_edep=This script cannot be installed, as this virtual server does not meet its requirements : $1
+scripts_eweb=Scripts can only be installed into virtual servers with a home directory and website
+scripts_ephpvers=This script cannot be installed, as it requires PHP version $1.
 scripts_return=list of scripts
 scripts_edownload=Download of $2 failed : $1
 scripts_edownload2=Download of $1 is not an archive file - perhaps an error page
