@@ -506,3 +506,5 @@ Added a link from the Edit Virtual Server page to show a server's current passwo
 Added the PHP Versions page (under Server Configuration on the left menu) for selecting the version of PHP to run for a virtual server. This can also be configured differently on a per-directory basis.
 Added the list-php-directories.pl, set-php-directory.pl and delete-php-directory.pl scripts for changing PHP version from the command line or remote API.
 Updated the Update Virtual Servers page to allow the default PHP version and PHP execution mode to be changed on multiple servers at once.
+Changed the script installer process to automatically use the correct PHP version required by the script, if available.
+Fixed the PHP Support script installer to automatically setup the database connection details for version 2.2.
